--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body{
 
 .form-section{
     width:100vw;
-    height:100vh;
+    height:100%;
     padding:2rem;
 }
 
@@ -34,6 +34,7 @@ body{
 .grid-page{
     display:grid;
     grid-template-columns: 1fr 1fr;
+    gap:10px;
     grid-template-areas: 
     'input  output';
 }
@@ -112,7 +113,7 @@ body{
 }
 
 .sub-btn{
-    width:20%;
+    width:30%;
     padding:1rem 2rem;
     border-radius:10px;
     font-family:'Oswald';
@@ -120,4 +121,38 @@ body{
     background-color:rgb(135, 12, 37);
     color:azure;
     letter-spacing: 1.5px;
+}
+
+.output{
+    grid-area: output;
+    border: 2px solid rgb(194, 190, 190);
+    padding:1.5rem;
+    height:100%;
+   
+}
+.output-div{
+  
+    background-color:rgba(88, 134, 183, 0.3);
+    display:flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width:100%;
+
+}
+
+.output-value{
+    font-family:'Oswald';
+    font-style:italic;
+    font-size:1.5rem;
+    color:azure;
+    padding:1rem 0;
+    
+}
+
+.button-output{
+    display:flex;
+    justify-content:center;
+    align-items: flex-end;
+    
 }
